docs: enviar documentação atualizada
