# api/src/routes/authRoutes.js
@@ -4,6 +4,7 @@ const authController = require('../controllers/authController');
 
 router.post('/login', authController.login);
 router.post('/logout', authController.logout);
+router.post('/register', authController.register);
 
 module.exports = router;
 
